force-app/main/default/objects/CommissionLineItem__c/fields/AppliedCommissionRate__c.field-meta.xml
<CustomField>
    <fullName>AppliedCommissionRate__c</fullName>
    <label>Applied Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>