force-app/main/default/objects/CommissionLineItem__c/fields/CommissionableAmount__c.field-meta.xml
<CustomField>
    <fullName>CommissionableAmount__c</fullName>
    <label>Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>