force-app/main/default/objects/CommissionLineItem__c/fields/CommissionRate__c.field-meta.xml
<CustomField>
    <fullName>CommissionRate__c</fullName>
    <label>Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>