force-app/main/default/objects/CommissionLineItem__c/fields/CommissionRecord__c.field-meta.xml
<CustomField>
    <fullName>CommissionRecord__c</fullName>
    <label>Commission Record</label>
    <referenceTo>CommissionRecord__c</referenceTo>
    <relationshipLabel>Commission Line Items</relationshipLabel>
    <relationshipName>CommissionLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>