force-app/main/default/objects/CommissionLineItem__c/fields/CustomItem__c.field-meta.xml
<CustomField>
    <fullName>CustomItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A commission line item that is not associated with either an opportunity line item or insurance line item</description>
    <label>Custom Item</label>
    <type>Checkbox</type>
</CustomField>