force-app/main/default/objects/CommissionLineItem__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Office</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Partner Parts Orders</fullName>
            </value>
            <value>
                <fullName>Counter Sale</fullName>
            </value>
            <value>
                <fullName>Retail Sales</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>