force-app/main/default/objects/CommissionLineItem__c/fields/EditCommissionableAmount__c.field-meta.xml
<CustomField>
    <fullName>EditCommissionableAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Commissionable Amount</label>
    <type>Checkbox</type>
</CustomField>