force-app/main/default/objects/CommissionLineItem__c/fields/hasChanged__c.field-meta.xml
<CustomField>
    <fullName>hasChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasChanged</label>
    <type>Checkbox</type>
</CustomField>