force-app/main/default/objects/CommissionLineItem__c/fields/InsuranceItemId__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItemId__c</fullName>
    <label>InsuranceItemId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>